# youtube-cli

./: Cargo.toml  LICENSE  README.md  install.sh
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
skills/youtube-agent/: SKILL.md
skills/youtube-cli/: SKILL.md
src/: cache.rs  cli.rs  config.rs  error.rs  main.rs  model.rs  output.rs
src/api/: channel.rs  mod.rs  search.rs  transcript.rs
