[package]
name = "youtube-cli"
version = "0.2.0"
edition = "2021"
description = "CLI tool for searching YouTube videos and downloading transcripts"

[[bin]]
name = "youtube-cli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# XML parsing (transcript captions)
quick-xml = { version = "0.37", features = ["serialize"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex (extracting API keys from page HTML)
regex = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dirs = "6"
sha2 = "0.10"
hex = "0.4"

# Base64 encoding (for protobuf params)
base64 = "0.22"

# Ctrl+C handling
ctrlc = { version = "3", features = ["termination"] }
